[package]
name = "kraft_dinner"
version = "0.1.0"
authors = ["Satoshi Tanda <tanda.sat@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
windy = { git = "https://github.com/takubokudori/windy", features = ["no_std", "macros"], branch = "main" }
#windy = { version = "0.1.3", features = ["no_std", "macros"] } # error

[dependencies.ntapi]
version = "0.3.6"
default-features = false
features = [
    "impl-default",
    "kernel",
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "winnt",
]

[build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"
